Fix layout bugs.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -7325,26 +7325,39 @@ button {
   margin-bottom: 15px; }
   .post .post__img-crop {
     overflow: hidden;
-    -webkit-transition: all 0.5s ease-in-out;
-            transition: all 0.5s ease-in-out;
-    margin-right: 20px; }
+    margin-right: 20px;
+    background: #0F74A0;
+    position: relative; }
     .post .post__img-crop img {
-      -webkit-transition: all 0.5s ease-in-out;
-              transition: all 0.5s ease-in-out;
-      margin-left: -15px;
-      margin-bottom: -15px;
-      min-width: 292px;
-      min-height: 170px; }
+      -webkit-transition: opacity 0.3s ease-in-out;
+              transition: opacity 0.3s ease-in-out; }
+    .post .post__img-crop .mask {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: -webkit-linear-gradient(top, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.8) 75%);
+      background: linear-gradient(to bottom, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.8) 75%);
+      content: '';
+      opacity: 0;
+      -webkit-transform: translate3d(0, 50%, 0);
+              transform: translate3d(0, 50%, 0);
+      -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+              transition: opacity 0.35s, transform 0.35s; }
   .post .post__heading {
-    color: #454545;
-    font-size: 22px;
+    color: #656565;
+    font-size: 20px;
     line-height: 1.1;
-    font-weight: 400; }
-    .post .post__heading:hover {
-      color: #000; }
+    font-weight: 400;
+    margin-top: -3px;
+    letter-spacing: 1px;
+    -webkit-transition: color 0.3s ease-in-out;
+            transition: color 0.3s ease-in-out; }
   .post .post__subheading {
     color: #454545;
-    font-size: 15px; }
+    font-size: 15px;
+    line-height: 1.2; }
   .post .post__suspension-points {
     color: #3498db; }
   .post .post__meta {
@@ -7352,16 +7365,18 @@ button {
     .post .post__meta .post__meta-date {
       color: #5e5e5e;
       font-size: 13px;
-      float: left; }
+      float: left;
+      text-transform: uppercase; }
     .post .post__meta .post__meta-read-more {
       color: #3498db;
       font-size: 13px;
       float: right; }
-  .post:hover .post__img-crop {
-    opacity: 0.8; }
-    .post:hover .post__img-crop img {
-      -webkit-transform: translate3d(10px, -3px, 2px);
-              transform: translate3d(10px, -3px, 2px); }
+  .post:hover .post__img-crop .mask {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0); }
+  .post:hover .post__heading {
+    color: #484c61; }
 
 .post__featured {
   overflow: hidden;
@@ -7509,7 +7524,8 @@ button {
     position: relative; }
     #posts .post .post__header .post__header-meta .post__header-meta-time {
       float: left;
-      font-size: 13px; }
+      font-size: 13px;
+      text-transform: uppercase; }
     #posts .post .post__header .post__header-meta .post__header-meta-share {
       float: right;
       font-size: 13px; }
