--- a/assets/styles/src/partials/_base.scss
+++ b/assets/styles/src/partials/_base.scss
@@ -219,28 +219,48 @@ button {
 
 	.post__img-crop {
 		overflow: hidden;
-		transition: all 0.5s ease-in-out;
 		margin-right: 20px;
+		background: #0F74A0;
+		position: relative;
+
 		img {
-			transition: all 0.5s ease-in-out;
-			margin-left: -15px;
-			margin-bottom: -15px;
-			min-width: 292px;
-			min-height: 170px;
+			transition: opacity .3s ease-in-out;
+			// transition: all 0.5s ease-in-out;
+			// margin-left: -15px;
+			// margin-bottom: -15px;
+			// min-width: 292px;
+			// min-height: 170px;
+		}
+
+		.category {
+
+		}
+		.mask {
+			position: absolute;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+		    background: linear-gradient(to bottom, rgba(72,76,97,0) 0%, rgba(72,76,97,0.8) 75%);
+		    content: '';
+		    opacity: 0;
+		    transform: translate3d(0,50%,0);
+		    transition: opacity 0.35s, transform 0.35s;
 		}
 	}
 	.post__heading {
-		color: #454545;
-		font-size: 22px;
+		color: #656565;
+		font-size: 20px;
 		line-height: 1.1;
 		font-weight: 400;
-		&:hover {
-			color: #000;
-		}
+		margin-top: -3px;
+		letter-spacing: 1px;
+		transition: color .3s ease-in-out;
 	}
 	.post__subheading {
 		color: #454545;
 		font-size: 15px;
+		line-height: 1.2;
 	}
 	.post__suspension-points {
 		color: #3498db;
@@ -251,6 +271,7 @@ button {
 			color: #5e5e5e;
 			font-size: 13px;
 			float: left;
+			text-transform: uppercase;
 		}
 		.post__meta-read-more {
 			color: #3498db;
@@ -261,10 +282,16 @@ button {
 
 	&:hover {
 		.post__img-crop {
-			opacity: 0.8;
 			img {
-				transform: translate3d(10px,-3px,2px);
+				// opacity: 0.8;
 			}
+			.mask {
+			    opacity: 1;
+				transform: translate3d(0,0,0);
+			}
+		}
+		.post__heading {
+			color: rgba(72, 76, 97, 1);
 		}
 	}
 }
@@ -432,6 +459,7 @@ button {
 				.post__header-meta-time {
 					float: left;
 					font-size: 13px;
+					text-transform: uppercase;
 				}
 				.post__header-meta-share {
 					float: right;
